--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
+
 	compile 'com.android.support:appcompat-v7:22.2.0'
 	compile 'com.android.support:cardview-v7:22.2.0'
 	compile 'com.android.support:recyclerview-v7:22.2.0'
@@ -31,5 +32,5 @@ dependencies {
 	compile 'com.jakewharton:butterknife:6.1.0'
 	compile 'com.squareup.okhttp:okhttp:2.4.0'
 	compile 'oauth.signpost:signpost-core:1.2.1.2'
-
+	compile 'com.android.support:support-v4:22.2.0'
 }
