--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
 	compileSdkVersion 22
@@ -11,6 +12,12 @@ android {
 		versionCode 1
 		versionName "1.0"
 	}
+
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+
 	buildTypes {
 		release {
 			minifyEnabled false
@@ -33,4 +40,10 @@ dependencies {
 	compile 'com.squareup.okhttp:okhttp:2.4.0'
 	compile 'oauth.signpost:signpost-core:1.2.1.2'
 	compile 'com.android.support:support-v4:22.2.0'
+}
+
+retrolambda {
+	jdk System.getenv("JAVA8_HOME")
+	oldJdk System.getenv("JAVA7_HOME")
+	javaVersion JavaVersion.VERSION_1_7
 }
