--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
 	compileSdkVersion 22
@@ -36,6 +37,9 @@ dependencies {
 	compile 'io.reactivex:rxandroid:0.24.0'
 	compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 	compile 'com.jakewharton:butterknife:6.1.0'
+	compile 'com.google.dagger:dagger:2.0.1'
+
+	apt 'com.google.dagger:dagger-compiler:2.0.1'
 }
 
 retrolambda {
