--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
 		targetSdkVersion 22
 		versionCode 1
 		versionName "1.0"
+
+		renderscriptTargetApi 22
+		renderscriptSupportModeEnabled true
 	}
 
 	compileOptions {
