--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,11 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+	<uses-permission android:name="android.permission.READ_SYNC_STATS"/>
 	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 	<application
 		android:name=".application.AdvancedRecyclerViewApplication"
@@ -35,7 +36,7 @@
 
 		<service android:name=".authenticator.AuthenticatorService">
 			<intent-filter>
-				<action android:name="android.accounts.AccountAuthenticator"/>
+				<action android:name="android.accounts.AccountAuthenticator" />
 			</intent-filter>
 			<meta-data
 				android:name="android.accounts.AccountAuthenticator"
@@ -44,10 +45,12 @@
 
 		<service
 			android:name=".sync.SyncService"
-			android:exported="true"
-			android:process=":sync">
+			android:exported="true">
+			<!--
+			android:process=":sync"
+			-->
 			<intent-filter>
-				<action android:name="android.content.SyncAdapter"/>
+				<action android:name="android.content.SyncAdapter" />
 			</intent-filter>
 			<meta-data
 				android:name="android.content.SyncAdapter"
