--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".activity.MainActivity"
-			android:label="@string/title_activity_main">
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
@@ -46,9 +46,6 @@
 		<service
 			android:name=".sync.SyncService"
 			android:exported="true">
-			<!--
-			android:process=":sync"
-			-->
 			<intent-filter>
 				<action android:name="android.content.SyncAdapter" />
 			</intent-filter>
